--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <body>
-    
+
     <head>
         <h1>hej hej</h1>
-         <h1>hej hej</h1>
+        <h3>hej hej</h3>
+        <h2>test</h2>
     </head>
 </body>
